# aws-c-io

./: .clang-tidy  .gitattributes  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  NOTICE  PKCS11.md  README.md  build-deps.sh  builder.json  setup_badssl.py  testlog
.builder/actions/: badssl_setup.py  badssl_test.py  custom_keychain_test_setup.py  main.py  pkcs11_test_setup.py  setup_asan.py  setup_clang_libasan_path.py  tls_server_setup.py  xcode-tests.py
.github/ISSUE_TEMPLATE/: bug-report.yml  config.yml
.github/workflows/: ci-slow.yml  ci.yml  clang-asan-ubsan.yml  clang-tsan.yml  proof-alarm.yml
.travis/: travis_build.sh
ci/: linux-container-ci.sh
cmake/: aws-c-io-config.cmake
cmake/modules/: FindLibCrypto.cmake
codebuild/: ancient-linux-x64.yml  ancient-linux-x86.yml  common-linux.sh  common-macos.sh  common-posix.sh  common-windows.bat  linux-clang6-x64.yml  linux-clang8-x64.yml  linux-gcc-4x-x86.yml  linux-integration-tests.yml  linux-libuv-x64.yml
docs/: epoll_event_loop_proof.md
docs/graphs/: channels_slots.graphml  handler.graphml  read_backpressure.graphml  slots.graphml  typical_channel.graphml
include/aws/io/: async_stream.h  channel.h  channel_bootstrap.h  channel_handler.h  dns.h  event_loop.h  exports.h  file_utils.h  future.h  host_resolver.h  io.h  l4_proxy.h  log_channel.h  log_formatter.h  log_writer.h  logging.h  message_pool.h  pem.h  pipe.h  pipeline_logger.h  pkcs11.h  pki_utils.h  platform.h  retry_strategy.h  shared_library.h  socket.h  socket_channel_handler.h  socks5.h  stream.h  (+6 more)
source/: alpn_handler.c  async_stream.c  channel.c  channel_bootstrap.c  channel_handler.c  event_loop.c  exponential_backoff_retry_strategy.c  file_utils.c  file_utils_shared.c  future.c  host_resolver.c  io.c  l4_proxy.c  log_channel.c  log_formatter.c  log_writer.c  logging.c  message_pool.c  no_retry_strategy.c  pem.c  pem_util.c  pem_utils.c  pipeline_logger.c  pkcs11.c  pkcs11_lib.c  pkcs11_private.h  pkcs11_tls_op_handler.c  pki_utils.c  retry_strategy.c  socket.c  socket_channel_handler.c  socket_shared.c  socks5.c  socks5_channel_handler.c  standard_retry_strategy.c  statistics.c  stream.c  tls_channel_handler.c  tls_channel_handler_shared.c  tracing.c  (+1 more)
source/aix/: pollset_event_loop.c
source/bsd/: kqueue_event_loop.c
source/darwin/: aws_apple_network_framework.h  darwin_error_message.c  darwin_error_message.h  darwin_pki_utils.c  darwin_shared.c  darwin_shared_private.h  dispatch_queue.h  dispatch_queue_event_loop.c  dispatch_queue_event_loop_private.h  nw_socket.c  secure_transport_tls_channel_handler.c  tls_channel_handler.c
source/emscripten/: epoll.c  up.h  upoll.c  upoll.h
source/libuv/: uv_event_loop.c
source/linux/: epoll_event_loop.c
source/posix/: file_utils.c  host_resolver.c  pipe.c  posix_host_resolver.c  posix_pipe.c  posix_socket.c  shared_library.c  socket.c
source/qnx/: host_resolver.c  ionotify_event_loop.c  kqueue_event_loop.c  pipe.c  socket.c
source/s2n/: s2n_apple_keychain.c  s2n_apple_keychain.h  s2n_tls_channel_handler.c  s2n_tls_handler.c  tls_channel_handler.c
source/socks5/: basic_auth.c  no_auth.c  socks5.c
source/windows/: file_utils.c  host_resolver.c  pipe.c  secure_channel_tls_handler.c  shared_library.c  windows_error_message.c  windows_error_message.h  windows_pki_utils.c  winsock_init.c
tests/: CMakeLists.txt  alpn_handler_test.c  async_stream_test.c  byo_crypto_test.c  channel_test.c  default_host_resolver_test.c  error_test.c  event_loop_test.c  exponential_backoff_retry_test.c  file_utils_test.c  future_test.c  future_test.h  io_lib_test.c  io_test.c  io_testing_channel_test.c  log_formatter_test.c  log_writer_test.c  main.c  mock_dns_resolver.c  mock_dns_resolver.h  no_retry_strategy_test.c  nw_socket_close_race_test.c  pem_test.c  pem_utils_test.c  pipe_test.c  pkcs11_test.c  pki_utils_test.c  read_write_test_handler.c  read_write_test_handler.h  shared_library_test.c  socket_handler_test.c  socket_test.c  socks5.c  socks5_test.c  standard_retry_test.c  statistics_handler_test.c  statistics_handler_test.h  stream_test.c  tls_handler_test.c  tls_handler_test.h  (+1 more)
tests/logging/: log_channel_test.c  log_formatter_test.c  log_writer_test.c  logging_filter_none_static_test.c  logging_filter_trace_static_test.c  logging_general_test.c  logging_test_utilities.c  logging_test_utilities.h  pipeline_logger_test.c  test_logger.c  test_logger.h
tests/resources/: README.md  ca_root.cnf  ca_root.crt  ca_root.key  certChain.crt  certchain.cnf  certchain.crt  certchain.key  certchain.pem  certchainroot.cnf  certificates.readme  client.crt  client.key  ec_unittests.crt  ec_unittests.key  ec_unittests.p12  ec_unittests.p8  ecc-cert-384.pem  ecc-cert.pem  ecc-key.pem  ecc-p384-key.pem  ecc-p521-cert.pem  ecc-p521-key.pem  ecc.csr  ed384_key.pem  ed384_server.pem  endDevice.crt  endDevice.key  generateCerts.sh  import_custom_cert_to_keychain.sh  intermediateCA.crt  key_pair0.pem  key_pair1.pem  key_pair2.pem  key_pair3.pem  key_pair4.pem  key_pair5.pem  key_pair6.pem  key_pair7.pem  key_pair_with_comments.pem  (+57 more)
tests/resources/badssl-certs/: wildcard-expired-chain.pem  wildcard-expired.crt
tests/resources/certroot/: ca_intermediate.cnf  ca_intermediate.crt  ca_intermediate.csr  ca_intermediate.key  ca_root.cnf  ca_root.crt  ca_root.key  cachain.crt  certchain.crt  client.csr  client.key  device.csr  device.key  index.txt  index.txt.old  server.csr  server.key
tests/resources/certroot/newcerts/: 1001.pem  1002.pem  1003.pem
tests/resources/newcerts/: 1000.pem  1001.pem  Notes  ca_intermediate.cnf  ca_intermediate.csr  ca_intermediate.key  ca_root.cnf  ca_root.key  certchain.crt  certchain.csr  certchain.key  certchained.pem  client.crt  client.csr  client.key  index.txt  index.txt.old  notes2  server.csr  steps
tests/tls_server/: tls_server.py
tests/vcc/: Makefile  README.md  cancel_task.c  client.c  is_on_callers_thread.c  lifecycle.c  main_loop.c  new_destroy.c  preamble.h  process_task_pre_queue.c  schedule.c  subscribe.c  unsubscribe.c
tests/vcc/docker-images/win10-vs2012/: Dockerfile
(+23 files in other folders)
